# actmf

./: .gitignore  CMakeLists.txt  README.md  actmf.kdev4
.kdev4/: actmf.kdev4  tmf.kdev4
actmf_actor/: .abstract_actor.cpp.kate-swp  CMakeLists.txt  addition.cpp  addition.h  haardetect.cpp  haardetect.h  image_writer.cpp  image_writer.h  num_disp.cpp  num_disp.h  num_gen.cpp  num_gen.h  num_gen_disp.cpp  num_gen_disp.h  rect_disp.cpp  rect_disp.h  video_reader.cpp  video_reader.h  video_writer.cpp  video_writer.h
actmf_application/: CMakeLists.txt  addition_app.conf  application.cpp  haardetect.conf  numgen_app.conf  video_rw.conf  vr_iw.conf
actmf_interface/: abstract_service.cpp  abstract_service.h
actmf_system/: CMakeLists.txt  application_parser.cpp  application_parser.h  environment.cpp  environment_actor.cpp  environment_actor.h  module_loader.cpp  module_loader.h  platform.cpp
actors/: CMakeLists.txt  addition.h  num_disp.h  num_gen.h  num_gen_disp.h
application/: CMakeLists.txt  application.cpp
core/: Attribute.h  Bus.cpp  Bus.h  CMakeLists.txt  Event.cpp  EventObserver.h  Factory.cpp  Filter.h  MediaSample.cpp  MediaSample.h  Pipeline.cpp  Port.h  PortCaps.cpp  actmf.cpp  actor.cpp  actor.h  factory.cpp  factory.h
draft/: CMakeLists.txt
draft/core/: Attribute.cpp  Event.h  EventObserver.cpp  Factory.h  Filter.cpp  InputPort.cpp  InputPort.h  MediaBuffer.cpp  MediaBuffer.h  OutputPort.cpp  OutputPort.h  Pipeline.h  Port.cpp  PortCaps.h  SampleSynchronizer.cpp  SampleSynchronizer.h
draft/examples/ehealth/: CMakeLists.txt
draft/examples/libav/: example05.cpp  example08.cpp
draft/filters/basic/: Add2Filter.h  AdditionFilter.h  DuplicateFilter.cpp  IntConsumerFilter.cpp  IntProducerFilter.cpp  IntProducerFilter.h  Multiply2Filter.cpp  Multiply2Filter.h  StringConsumerFilter.cpp  StringProducerFilter.cpp
draft/filters/ehealth/: EHealthDisplay.h  EHealthSender.h  EHealthSensor.cpp
draft/filters/ehealth/tools/: Chronometer.cpp  Chronometer.h  HTTPHandler.cpp  JSONHandler.cpp  Scheduler.h
draft/filters/libav/: ImageScalerFilter.cpp  ImageScalerFilter.h  ImageWriterFilter.cpp  VideoDisplayFilter.cpp  VideoDisplayFilter.h  VideoEncoderFilter.cpp  VideoMuxerFilter.h  VideoReaderFilter.cpp  VideoReaderFilter.h  VideoWriterFilter.cpp
draft/filters/libav/tools/: ImageScaler.h  VideoDisplay.cpp  VideoDisplay.h  VideoEncoder.cpp  VideoMuxer.cpp  VideoMuxer.h  VideoReader.cpp  VideoReader.h  VideoWriter.cpp
draft/filters/libav/types/: Frame.h
draft/tools/: ConfigurationManager.cpp  ConfigurationManager.h
environment/: CMakeLists.txt  environment.cpp  environment_actor.cpp  environment_actor.h
examples/: CMakeLists.txt  addition_app.conf  application.cpp  environment.cpp  user_actor.cpp  user_addition.cpp
examples/basic/: CMakeLists.txt  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp
examples/ehealth/: sensordisplay.cpp  sensorsender.cpp
examples/libav/: CMakeLists.txt  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp
filters/basic/: Add2Filter.cpp  Add2Filter.h  AdditionFilter.cpp  AdditionFilter.h  DuoProducerFilter.cpp  DuoProducerFilter.h  DuplicateFilter.h  IntConsumerFilter.h  IntProducerFilter.h  Multiply2Filter.h  StringConsumerFilter.h  StringProducerFilter.h
filters/ehealth/: EHealthDisplay.cpp  EHealthDisplay.h  EHealthSender.cpp  EHealthSender.h  EHealthSensor.h
filters/ehealth/tools/: HTTPHandler.h  JSONHandler.h  Scheduler.cpp
filters/libav/: ImageScalerFilter.h  ImageWriterFilter.h  VideoDisplayFilter.h  VideoEncoderFilter.h  VideoMuxerFilter.cpp  VideoMuxerFilter.h  VideoReaderFilter.h  VideoWriterFilter.h
filters/libav/tools/: ImageScaler.cpp  ImageWriter.cpp  ImageWriter.h  VideoEncoder.h  VideoWriter.h
filters/libav/types/: EncodedFrame.h  RawFrame.h
libactmf_actor/: CMakeLists.txt  addition.h  num_disp.h  num_gen.h  num_gen_disp.h
libactmf_core/: CMakeLists.txt  abstract_actor.cpp  abstract_actor.h
libactmf_core/actmf/: abstract_actor.h  addition_actor.h  all.h  appilcation.h  disp_num_actor.h  environment_actor.h  factory.h  gen_num_actor.h  graph.h
libactmf_core/src/: abstract_actor.cpp  addition_actor.cpp  application.cpp  disp_num_actor.cpp  environment_actor.cpp  factory.cpp  gen_num_actor.cpp  graph.cpp
remote_spawn/: compile.sh  master.cpp  platform.cpp
src/: main.cpp
